# Grammar_Corrector

./: .dockerignore  .env.example  .gitignore  Dockerfile  MODEL_COMPARISON.md  Makefile  README.md  analyze_errors_bea2019.py  create_test_data.py  docker-compose.yml  evaluate_bea2019.py  evaluate_llama32.py  pyproject.toml  requirements-api.txt  requirements.txt  test_all_models.py  test_grammarly_batched.py  test_grammarly_model.py  test_inference.py  test_inference_bea2019.py  test_pretrained_model.py  test_training.py  train_bea2019.py  train_coedit_bea2019.py  train_full_synthetic.py  train_full_synthetic_fixed.py  train_llama32_bea2019.py  watch_training.py
.github/workflows/: ci.yml
documentation/: PROJECT_STATUS.md
documentation/phase_2_data_engineering/: README.md
documentation/phase_3_model_development/: README.md
documentation/phase_4_evaluation/: README.md
documentation/phase_5_api_frontend/: README.md
documentation/phase_6_llama_training/: README.md
documentation/phase_7_deployment/: README.md
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb
scripts/: convert_synthetic_to_csv.py  download_bea2019_hf.py  generate_synthetic_gec_dataset.py
src/: __init__.py
src/api/: __init__.py  main.py  models.py  routes.py
src/deployment/: Dockerfile  docker-compose.yml
src/models/: __init__.py  bart_gec.py  (+4 more)
tests/: __init__.py  conftest.py
(+20 files in other folders)
